--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "restart": "./container/build.sh && npm run build && launchctl kickstart -k gui/$(id -u)/com.nanoclaw"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
